Fix horizontal scroll

--- a/css/landingStyle.css
+++ b/css/landingStyle.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Encode Sans Semi Condensed', sans-serif;
+  overflow-x: hidden;
 }
 
 .container-full {
